fix: code and header spacing (#5)

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1190,7 +1190,7 @@ Usage (In Ghost editor):
 
 .post-full-content pre {
   overflow-x: auto;
-  margin: 1.5em 0 3em;
+  margin-bottom: 3rem !important;
   padding: 20px;
   max-width: 100%;
   color: var(--whitegrey);
@@ -1250,6 +1250,8 @@ Usage (In Ghost editor):
   color: color(var(--darkgrey) l(-5%));
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  margin-top: 3.5rem !important;
+  margin-bottom: 1.5rem !important;
 }
 
 .post-full-content h1 {
